# midnight_python_sdk

./: .gitignore  AIRDROP_FEATURE.md  CHANGELOG.md  CLEANUP_COMPLETE.md  CLI_FIX_SUMMARY.md  CLI_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  FAUCET_FEATURE.md  MANIFEST.in  QUICK_START_GUIDE.md  README.md  TRANSFER_IMPLEMENTATION_SUMMARY.md  WALLET_BALANCE_FIX.md  build_for_pypi.py  check_preprod_balance.mjs  check_preprod_simple.py  check_real_balance.py  contract_deployment_examples.py  debug_check.py  demo_contract_deployments.py  deploy_contract.py  deploy_contract_real.mjs  deploy_real_preprod.mjs  docker-compose.yml  fund_wallet.py  get_addresses_all_networks.mjs  get_real_balance.mjs  get_wallet_address.mjs  lace_bridge.mjs  manage_transactions.py  mnemonic.txt.example  package-lock.json  package.json  package_wallet.json  prepod.mnemonic.txt  pyproject.toml  pytest.ini  read_balance.mjs  run_cli_tests.py  shielded_transfer_demo.py  (+14 more)
.kiro/specs/sdk-architecture-improvements/: .config.kiro
contracts/: ai_inference.compact  bulletin_board.compact  hello_world.compact  private_vote.compact
contracts/managed/ai_inference/compiler/: contract-info.json
contracts/managed/ai_inference/contract/: index.d.ts  index.js  index.js.map
contracts/managed/bulletin_board/compiler/: contract-info.json
contracts/managed/bulletin_board/contract/: index.d.ts  index.js  index.js.map
contracts/managed/hello_world/compiler/: contract-info.json
docker/indexer/: Dockerfile  server.py
docker/node/: Dockerfile  blockchain.py  server.py
docker/proof/: Dockerfile
docs/: CONTRACT_TESTING_GUIDE.md  DEMO_SCRIPT.md  DEPLOYMENT_GUIDE.md  DOCKER_SETUP.md  EXPLORER_AND_SIGNING_VERIFICATION.md  EXPLORER_FIX_SUMMARY.md  MIDNIGHT_TOKEN_MODEL.md  PRODUCTION_READY.md  PRODUCTION_SETUP.md  PROJECT_STRUCTURE.md  QUICK_SIGNING_GUIDE.md  QUICK_START.md  TRANSACTION_MANAGEMENT.md
docs/cli/: ARCHITECTURE.md  CLI_REFERENCE.md  COMPLETE_CLI_REFERENCE.md  EXAMPLES.md  MIGRATION_GUIDE.md  README.md  TRANSFER_GUIDE.md  TRANSFER_QUICK_REFERENCE.md
examples/: ai_inference.py  ai_inference_with_signing.py  bulletin_board.py  bulletin_board_with_signing.py  complete_transaction_workflow.py  production_ai_inference.py  test_all_contracts.py
midnight_py/: ai.py  cli.py  client.py  codegen.py  contract.py  exceptions.py  indexer.py  lace_connector.py  models.py  network_detector.py  wallet.py
midnight_sdk/: indexer.py  verify.py  wallet.py
midnight_sdk/builder/: __init__.py  transaction_builder.py
midnight_sdk/cli/: __init__.py
midnight_sdk/cli/commands/: ai.py  config.py  console.py  contract.py  events.py  explorer.py  node.py  proof.py  system.py  transfer.py  tx.py  verify.py  wallet.py
midnight_sdk/config/: __init__.py  manager.py
scripts/: verify_wallet.py
scripts/testing/: comprehensive_transfer_test.py  quick_transfer_test.py  test_all_functionality.py  test_small_transfer.py  test_with_1am.md
scripts/wallet/: TRANSFER_SCRIPTS_README.md  get_all_addresses.mjs  get_full_balance.mjs  get_quick_balance.mjs  get_wallet_address.mjs  query_balance_direct.mjs  query_indexer_balance.py  transfer_complete.mjs  transfer_shielded.mjs  transfer_unshielded.mjs
tests/: test_wallet.py
tests/cli/: test_cli_commands.py  test_config.py  test_transaction_builder.py
(+9 files in other folders)
