[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "midnight-sdk"
version = "0.1.1"
description = "The first comprehensive Python SDK for building zero-knowledge applications on the Midnight blockchain"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Midnight Labs", email = "developers@midnight.network" }
]
maintainers = [
    { name = "Midnight Labs", email = "developers@midnight.network" }
]
keywords = [
    "midnight", 
    "blockchain", 
    "zero-knowledge", 
    "zk-snarks", 
    "privacy", 
    "cryptography",
    "smart-contracts",
    "web3",
    "sdk"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security :: Cryptography",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Distributed Computing"
]
dependencies = [
    "httpx>=0.27",
    "websockets>=12",
    "pydantic>=2",
    "typer>=0.12",
    "rich>=13",
    "mnemonic>=0.21",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "ipython>=8.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.4",
]
examples = [
    "jupyter>=1.0",
    "matplotlib>=3.5",
    "seaborn>=0.11",
]
all = [
    "midnight-sdk[dev,examples]"
]

[project.urls]
Homepage = "https://github.com/midnight-labs/midnight-python-sdk"
Documentation = "https://github.com/midnight-labs/midnight-python-sdk#readme"
Repository = "https://github.com/midnight-labs/midnight-python-sdk"
Issues = "https://github.com/midnight-labs/midnight-python-sdk/issues"
Changelog = "https://github.com/midnight-labs/midnight-python-sdk/releases"

[project.scripts]
midnight = "midnight_sdk.cli:cli_main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
